# brewdock

./: AGENTS.md  Cargo.toml  README.md  TODO.md  Taskfile.yml
.github/workflows/: ci.yml  gha.yml  renovate.yml  security.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: error.rs  lib.rs  post_install.rs  test_do.rs
crates/analysis/src/post_install/: schema.rs  tests.rs
crates/analyze/: Cargo.toml
crates/analyze/src/: main.rs
crates/bottle/: Cargo.toml
crates/bottle/src/: download.rs  error.rs  extract.rs  lib.rs  store.rs  verify.rs
crates/cellar/: Cargo.toml
crates/cellar/src/: copy_strategy_spike.rs  discover.rs  error.rs  lib.rs  link.rs  materialize.rs  post_install.rs  receipt.rs  relocate.rs  state.rs  test_do.rs  util.rs
crates/cellar/src/post_install/: context.rs  execute.rs  rollback.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: hint.rs  main.rs  output.rs  progress.rs  testutil.rs  trace.rs  verbosity.rs
crates/cli/src/commands/: cleanup.rs  doctor.rs  info.rs  install.rs  list.rs  mod.rs  outdated.rs  search.rs  update.rs  upgrade.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  finalize.rs  layout.rs  lib.rs  lock.rs  orchestrate.rs  platform.rs  progress.rs  source_build.rs  testutil.rs
crates/core/src/orchestrate/: execution.rs  planning.rs  query.rs
crates/core/src/orchestrate/tests/: install.rs  metadata.rs  mod.rs  post_install.rs  query.rs  source_fallback.rs  upgrade.rs
crates/core/src/source_build/: archive.rs  runner.rs
crates/formula/: Cargo.toml
crates/formula/src/: bottle_selection.rs  cellar_type.rs  error.rs  formula_name.rs  lib.rs  resolve.rs  supportability.rs  types.rs  version.rs
crates/formula/src/api/: cache.rs  client.rs  metadata_store.rs  mod.rs
crates/formula/tests/: public_api.rs
crates/formula/tests/fixtures/formula/: jq.json  oniguruma.json  semgrep.json  sqlmap.json  zsh-completions.json  zsh-fast-syntax-highlighting.json
crates/sys/: Cargo.toml
crates/sys/src/: lib.rs  macos.rs
docs/: architecture.md  benchmarks.md  coding.md  pipeline-baseline.md  testing.md  tooling.md
docs/adr/: 0001-nanobrew-install-method.md  0002-user-facing-progress-output.md  0003-copy-strategy-next-step.md  0004-three-tier-post-install-strategy.md  0005-test-do-runtime-v1.md
tests/: vm-benchmark.sh  vm-config.sh  vm-pipeline-baseline.sh  vm-smoke-test.sh
