[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/shuymn/brewdock"
readme = "README.md"
keywords = ["homebrew"]
categories = ["command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# Deny footguns and half-finished code paths
dbg_macro = "deny"
expect_used = "deny"
infinite_loop = "deny"
map_err_ignore = "deny"
panic = "deny"
str_to_string = "deny"
implicit_clone = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

# Stricter API / docs hygiene (warnings promoted to errors via -D warnings in task lint)
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
