[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/shuymn/brewdock"
readme = "README.md"
keywords = ["homebrew"]
categories = ["command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# Deny footguns and half-finished code paths
dbg_macro = "deny"
expect_used = "deny"
infinite_loop = "deny"
map_err_ignore = "deny"
panic = "deny"
str_to_string = "deny"
implicit_clone = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

# Stricter API / docs hygiene (warnings promoted to errors via -D warnings in task lint)
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# clippy::cargo group — configured individually to avoid source-level group override
cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
# Transitive deps may pull multiple versions; not under our control
multiple_crate_versions = "allow"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
