[package]
name = "brewdock-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Formula compatibility analysis tool for brewdock"

[[bin]]
name = "bd-analyze"
path = "src/main.rs"

[dependencies]
brewdock-analysis = { path = "../analysis" }
brewdock-formula = { path = "../formula" }
anyhow = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "=1.51.0", features = ["rt", "macros"] }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
