[package]
name = "brewdock-cellar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cellar materialization, receipt, linking, and state management for brewdock"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.38", features = ["bundled"] }
brewdock-analysis = { path = "../analysis" }
rayon = "1"

[target.'cfg(target_os = "macos")'.dependencies]
brewdock-sys = { path = "../sys" }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
