[package]
name = "brewdock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for brewdock — fast Homebrew bottle installer"

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
brewdock-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
