[package]
name = "brewdock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for brewdock — fast Homebrew bottle installer"

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
brewdock-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
brewdock-formula = { path = "../formula" }
brewdock-bottle = { path = "../bottle" }
brewdock-cellar = { path = "../cellar" }
serde_json.workspace = true
tempfile = "=3.27.0"
flate2 = "=1.1.9"
tar = "=0.4.45"

[lints]
workspace = true
