[package]
name = "brewdock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and orchestration for brewdock"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
futures.workspace = true
brewdock-formula = { path = "../formula" }
brewdock-bottle = { path = "../bottle" }
brewdock-cellar = { path = "../cellar" }
fs2 = "0.4"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
tokio = { version = "=1.50.0", features = ["rt", "macros"] }
flate2 = "=1.1.9"
tar = "=0.4.45"

[lints]
workspace = true
