[package]
name = "brewdock-formula"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Formula types, API client, and dependency resolution for brewdock"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
