[package]
name = "brewdock-formula"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Formula types, API client, and dependency resolution for brewdock"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
httpmock = "=0.8.3"
tempfile = "=3.27.0"
tokio = { version = "=1.50.0", features = ["macros", "rt"] }

[lints]
workspace = true
