[package]
name = "brewdock-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform-specific FFI wrappers for brewdock"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "=3.27.0"

# Does not inherit workspace lints — this crate requires `unsafe` for FFI.
[lints.rust]
unsafe_code = "allow"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
